--- a/webapp/src/features/playing/CombinationLine.module.scss
+++ b/webapp/src/features/playing/CombinationLine.module.scss
@@ -2,8 +2,8 @@
 
 .combinations {
   background-color: #282c34;
-  padding: 10px;
-  font-size: 1.5rem;
+  padding: 4px;
+  // font-size: 1rem;
   display: flex;
   align-content: center;
   height: $footerHeight;
@@ -13,7 +13,7 @@
   margin: auto;
   color: white;
   padding: 4px;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: left;
 }
 
