--- a/webapp/src/features/playing/GameGrid.module.scss
+++ b/webapp/src/features/playing/GameGrid.module.scss
@@ -2,13 +2,12 @@
 
 .gameBackground {
   height: 100%;
-  max-height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: scroll;
-  touch-action: manipulation;
   background: $color1;
+  overflow: scroll;
+}
+
+.gridContainer {
+  margin: auto;
 }
 
 .grid {
