--- a/webapp/src/features/playing/PlayGame.module.scss
+++ b/webapp/src/features/playing/PlayGame.module.scss
@@ -3,8 +3,7 @@
 .content {
   width: 100%;
   height: calc(100% - #{$headerHeight} + #{$footerHeight});
-  background-color: blue;
   display: grid;
-  grid-template-columns: 1fr 300px;
+  grid-template-columns: 1fr 200px;
   overflow: hidden;
 }
